src/objects/Partner_Profile_PC__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Profiles_PC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Company_Websites__c</fullName>
        <label>Additional Company Websites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Anti_Corruption_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anti-Corruption Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Email_Address__c</fullName>
        <label>Applicant Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Break_Fix_Offered__c</fullName>
        <label>Break-Fix Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Not Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary &amp; Fee Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Address_1__c</fullName>
        <label>Primary Motorola Contact Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Address_2__c</fullName>
        <label>Primary Motorola Contact Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Contact_City_Town__c</fullName>
        <label>Primary Motorola Contact City / Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Country__c</fullName>
        <label>Primary Motorola Contact Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Email__c</fullName>
        <label>Primary Motorola Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Phone__c</fullName>
        <label>Primary Motorola Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Postal_Code__c</fullName>
        <label>Primary Motorola Contact Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Contact_State_Province__c</fullName>
        <label>Primary Motorola Contact State/Province</label>
        <picklist>
            <controllingField>Business_Contact_Country__c</controllingField>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Title__c</fullName>
        <label>Primary Motorola Contact Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <picklist>
            <picklistValues>
                <fullName>Application partner / Developer Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier / Service provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Tailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network / System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Added Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Service Provider</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Product__c</fullName>
        <label>Category Product</label>
        <picklist>
            <picklistValues>
                <fullName>Barcode Scanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers &amp; Terminals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels, Tags &amp; Ribbons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Civilian__c</fullName>
        <label>% Federal Sales Civilian</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Company Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Develops_Software_Firmware__c</fullName>
        <label>Company Develops Software/Firmware</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Id_Type__c</fullName>
        <label>Company ID Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tax Registration ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT Registration ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Legal_Name__c</fullName>
        <label>Company Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Owned_Type__c</fullName>
        <label>Company Owned_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Publically Held</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privately Held</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Tax_Registration_ID__c</fullName>
        <label>Company ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Trading_Name__c</fullName>
        <label>Company DBA/Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Competitor_Bar_Code_Scanner_Soln_Sales__c</fullName>
        <label>Competitor Bar Code Scanner Soln Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Cipher Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datalogic Scanning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Densei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeywell Imaging Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opticon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unitech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Device_Mgmt_Solution_Sales__c</fullName>
        <label>Competitor Device Mgmt Solution Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Afaria from Sybase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airwatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermec Smartsystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft SCCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobileron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wavelink Avalanche</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Mobile_Computer_Solution_Sale__c</fullName>
        <label>Competitor Mobile Computer Solution Sale</label>
        <picklist>
            <picklistValues>
                <fullName>Bluebird</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CipherLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datalogic Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Densei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujitsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoft &amp; Wessel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeywell Mobility Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Janam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LXE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Compia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opticon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panasonic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roper Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unitech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocollect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor_RFID_Solution_Sales__c</fullName>
        <label>Competitor RFID Solution Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Alien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impinj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVENGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LXE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raflatac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIRIT Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thing Magic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Computer_Based_Call_Training__c</fullName>
        <label>Computer Based Call Training Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Not Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary &amp; Fee Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactsPopulatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to render section for panel grid and input text</description>
        <label>ContactsPopulatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Projects_Tech_Support_Pct__c</fullName>
        <label>Customer Projects Tech Support Pct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Describe_Levels_of_Security_Clearance__c</fullName>
        <label>Describe Levels of Security Clearance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diagnostics_Offered__c</fullName>
        <label>Diagnostics Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Not Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary &amp; Fee Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Divison_of_or_Owned_by_Another_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Divison of or Owned by Another Company?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoD__c</fullName>
        <label>% Federal Sales DoD</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Conduct_Code_Train__c</fullName>
        <label>Due Diligence Conduct Code Train</label>
        <picklist>
            <picklistValues>
                <fullName>Every 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every 2 years or greater</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Conduct_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Conduct Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Countries_APAC__c</fullName>
        <label>Due Diligence Countries APAC</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocos (Keeling Islands)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cook Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Democratic People&apos;s Republic of Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federated States of Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heard Island and McDonald Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iraq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islamic Republic of Iran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jordan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kazakhstan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiribati</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Countries_EMEA__c</fullName>
        <label>Due Diligence Countries EMEA</label>
        <picklist>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comoros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Democratic Republic of the Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Djibouti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equatorial Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eritrea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Countries_LA__c</fullName>
        <label>Due Diligence Countries LA</label>
        <picklist>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayman Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guyana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paraguay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sint Maarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suriname</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uruguay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venezuela</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Countries__c</fullName>
        <label>Due Diligence Countries</label>
        <picklist>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grenada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jamaica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicaragua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Kitts and Nevis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Lucia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Vincent and The Grenadines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trinidad and Tobago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Govt_Emp_Name__c</fullName>
        <label>Due Diligence Govt Emp Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Govt_Emp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Govt Emp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Govt_Owner_Pct__c</fullName>
        <label>Due Diligence Govt Owner Pct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Govt_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Govt Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Purch_Influence_Name__c</fullName>
        <label>Due Diligence Purch Influence Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Purch_Influence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Purch Influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Resell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Resell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EVM_Partner_Profile_Id__c</fullName>
        <description>This field is used as a Place holder for MSI SFDC Partner Profile ID within Zebra</description>
        <externalId>true</externalId>
        <label>EVM Partner Profile Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Commerce_Websites__c</fullName>
        <label>E-Commerce Websites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_to_Partner_Update_T_C_Addendums__c</fullName>
        <description>This field was added and copied over from the account object.  It is the day we email existing partners (grandfathering).  We needed to place this date plus 60 to provide partner with the date they had to complete.  VF Template wasn&apos;t taking a relational field lookup to account.</description>
        <label>Email to Partner Update T C Addendums</label>
        <type>Date</type>
    </fields>
</CustomObject>